testsuite/tests/saks/should_fail/saks_fail017.stderr

saks_fail017.hs:12:13: error: Not in scope: type variable ‘k’
